--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "eslint"
 	},
 	"dependencies": {
+		"@clerk/nextjs": "^6.34.5",
 		"@mui/icons-material": "^7.3.5",
 		"@radix-ui/react-accordion": "^1.2.12",
 		"@radix-ui/react-checkbox": "^1.3.3",
